--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "main": "index.js",
   "dependencies": {
+    "express": "^4.17.2",
+    "axios": "^0.25.0",
+    "twilio": "^3.69.0",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1"
   },
